force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__File_Open_Link__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__File_Open_Link__c</fullName>
    <description>Open the electronic version of the file for viewing.</description>
    <inlineHelpText>Enter the URL for the web based file to create a link to the online version of the file.</inlineHelpText>
    <label>File Open Link</label>
    <type>Url</type>
</CustomField>