force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__File_Status__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__File_Status__c</fullName>
    <description>File Status Picklist Field</description>
    <inlineHelpText>File status name. Enter additional values in the picklist settings for the field in setup.</inlineHelpText>
    <label>File Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__File_Status</valueSetName>
    </valueSet>
</CustomField>