force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__File_Type__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__File_Type__c</fullName>
    <inlineHelpText>File type name. Enter additional values in the picklist settings for the field in setup.</inlineHelpText>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__File_Type</valueSetName>
    </valueSet>
</CustomField>