force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__HDD_Size__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__HDD_Size__c</fullName>
    <inlineHelpText>Enter the total size of hard drive disk space.</inlineHelpText>
    <label>HDD Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>