force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__ICCID_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__ICCID_Number__c</fullName>
    <label>ICCID Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>