force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__IMEI_MEID_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__IMEI_MEID_Number__c</fullName>
    <label>IMEI/MEID Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>