force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Date__c</fullName>
    <description>Not Used, Replaced by Inspection Date Time Field</description>
    <label>Inspection Date</label>
    <type>Date</type>
</CustomField>