force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Inspection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Date_Time__c</fullName>
    <label>Inspection Date Time</label>
    <type>DateTime</type>
</CustomField>