force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Inspection_Procedure__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the lookup records from Maintenance and Inspection Procedure object for inspection procedure type</description>
    <label>Inspection Procedure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TrackIT__Maintenance_and_Inspection_Procedure__c.TrackIT__Type__c</field>
            <operation>equals</operation>
            <value>Inspection</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TrackIT__Maintenance_and_Inspection_Procedure__c</referenceTo>
    <relationshipLabel>Items (Inspection Procedure)</relationshipLabel>
    <relationshipName>Items1</relationshipName>
    <type>Lookup</type>
</CustomField>