force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Inspection_Reminder_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Reminder_Time__c</fullName>
    <inlineHelpText>Enter the reminder time. This field is needed if adding a reminder time for the next inspection date as an event on the assigned inspector&apos;s calendar.</inlineHelpText>
    <label>Inspection Reminder Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__FM_Reminder_Times</valueSetName>
    </valueSet>
</CustomField>