force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Installation_Date__c</fullName>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>