force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Last_Annual_Inspection_Result__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Last_Annual_Inspection_Result__c</fullName>
    <label>Last Annual Inspection Result</label>
    <length>10</length>
    <type>Text</type>
</CustomField>