force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Location__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Location of an item.</description>
    <inlineHelpText>Location of an item from the related location object. Field is required in order to save the record.</inlineHelpText>
    <label>Location</label>
    <referenceTo>TrackIT__Location__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>