force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Location_Desc__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location_Desc__c</fullName>
    <description>Location description from location object updated by system.</description>
    <inlineHelpText>Location description from location object updated by system.</inlineHelpText>
    <label>Location Desc</label>
    <type>TextArea</type>
</CustomField>