force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Location_Name__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Location_Name__c</fullName>
    <description>Location name from location object updated by system.</description>
    <label>Location Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>