force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Maintenance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Maintenance_Due_Date__c</fullName>
    <label>Maintenance Due Date</label>
    <type>Date</type>
</CustomField>