force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Maintenance_Duration_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Maintenance_Duration_Time__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Approximate duration time of maintenance in minutes</description>
    <inlineHelpText>Enter the approximate duration time in minutes needed for maintenance of this piece of equipment. This field is needed if adding the next maintenance due date as an event on the assigned technician&apos;s calendar.</inlineHelpText>
    <label>Maintenance Duration Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>