force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Maintenance_Procedure__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Maintenance_Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the lookup records from Maintenance and Inspection Procedure object for maintenance procedure type</description>
    <label>Maintenance Procedure</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TrackIT__Maintenance_and_Inspection_Procedure__c.TrackIT__Type__c</field>
            <operation>equals</operation>
            <value>Maintenance</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TrackIT__Maintenance_and_Inspection_Procedure__c</referenceTo>
    <relationshipLabel>Items (Maintenance Procedure)</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>