force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Maintenance_Remind_Time_Calc__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Maintenance_Remind_Time_Calc__c</fullName>
    <inlineHelpText>Used to convert reminder time picklist value to numeric for reminder time calculation.</inlineHelpText>
    <label>Maintenance Remind Time Calc</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>