force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Manufacture_Date__c</fullName>
    <label>Manufacture Date</label>
    <type>Date</type>
</CustomField>