force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Manufacturer__c</fullName>
    <description>Manufacturer Picklist Field</description>
    <inlineHelpText>Manufacturer name. Enter additional values in the picklist settings for the field in setup.</inlineHelpText>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Manufacturer</valueSetName>
    </valueSet>
</CustomField>