force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Matter__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>TrackIT__Matter__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>