force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Model_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Model_Number__c</fullName>
    <description>Model number or name</description>
    <inlineHelpText>Model number or name. Enter additional values in the picklist settings for the field in setup.</inlineHelpText>
    <label>Model Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Model_Number</valueSetName>
    </valueSet>
</CustomField>