force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Monthly_Inspection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Monthly_Inspection_Date_Time__c</fullName>
    <label>Monthly Inspection Date Time</label>
    <type>DateTime</type>
</CustomField>