force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Next_5_Year_Inspection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Next_5_Year_Inspection_Date_Time__c</fullName>
    <description>Next 5 Year Inspection Date Time</description>
    <label>Next 5 Year Inspection Date Time</label>
    <type>DateTime</type>
</CustomField>