force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Next_Annual_Inspection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Next_Annual_Inspection_Date_Time__c</fullName>
    <description>Next Annual Inspection Date Time</description>
    <label>Next Annual Inspection Date Time</label>
    <type>DateTime</type>
</CustomField>