force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Next_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Next_Inspection_Date__c</fullName>
    <description>Not Used, Replaced by Next Inspection Date Time Field</description>
    <label>Next Inspection Date</label>
    <type>Date</type>
</CustomField>