force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__OS_Version__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__OS_Version__c</fullName>
    <label>OS Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__OS_Version</valueSetName>
    </valueSet>
</CustomField>