force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__PO_Number__c</fullName>
    <description>Purchase Order Number associated with the record</description>
    <inlineHelpText>Purchase order number associated with the record</inlineHelpText>
    <label>PO Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>