force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>