force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Purchase_Price__c</fullName>
    <label>Purchase Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>