force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__RAM__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__RAM__c</fullName>
    <label>RAM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>