force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>