force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Rental_Charge__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Rental_Charge__c</fullName>
    <description>Rental cost for day</description>
    <inlineHelpText>Rental charge per day used to calculate the rental amount for items assigned out</inlineHelpText>
    <label>Rental Charge</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>