force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Salvage_Value__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Salvage_Value__c</fullName>
    <label>Salvage Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>