force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Serial_Number__c</fullName>
    <description>Serial Number of a fixed asset or equipment</description>
    <label>Serial Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>