force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Service_Contract_Cost__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Service_Contract_Cost__c</fullName>
    <label>Service Contract Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>