force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Service_Contract_Information__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Service_Contract_Information__c</fullName>
    <label>Service Contract Information</label>
    <length>40</length>
    <type>Text</type>
</CustomField>