force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Service_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Service_Contract_Start_Date__c</fullName>
    <label>Service Contract Start Date</label>
    <type>Date</type>
</CustomField>