force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Six_Year_Inspection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Six_Year_Inspection_Date_Time__c</fullName>
    <label>Six Year Inspection Date Time</label>
    <type>DateTime</type>
</CustomField>