force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Ten_Year_Inspect_Remind_Time_Calc__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Ten_Year_Inspect_Remind_Time_Calc__c</fullName>
    <description>Used to convert reminder time picklist value to numeric for reminder time calculation.</description>
    <label>Ten Year Inspect Remind Time Calc</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>