force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Ten_Year_Inspection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Ten_Year_Inspection_Date_Time__c</fullName>
    <label>Ten Year Inspection Date Time</label>
    <type>DateTime</type>
</CustomField>