force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Useful_Life_in_Years__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Useful_Life_in_Years__c</fullName>
    <label>Useful Life in Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>