force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Warranty_Information__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Warranty_Information__c</fullName>
    <label>Warranty Information</label>
    <length>40</length>
    <type>Text</type>
</CustomField>