force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Warranty_Start_Date__c</fullName>
    <label>Warranty Start Date</label>
    <type>Date</type>
</CustomField>