force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Website_Link__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Website_Link__c</fullName>
    <description>Open website in new window for related information for this item.</description>
    <inlineHelpText>Open website in new window for related information for this item.</inlineHelpText>
    <label>Website Link</label>
    <type>Url</type>
</CustomField>