force-app/main/default/objects/TrackIT__Item__c/fields/TrackIT__Weight__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Weight__c</fullName>
    <label>Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Weight</valueSetName>
    </valueSet>
</CustomField>