force-app/main/default/objects/TrackIT__Item__c/recordTypes/TrackIT__Computer.recordType-meta.xml
<RecordType>
    <fullName>TrackIT__Computer</fullName>
    <active>true</active>
    <description>Record Type for Facility Manager Computer and Peripheral Device Records</description>
    <label>Computer</label>
</RecordType>