force-app/main/default/objects/TrackIT__Item__c/recordTypes/TrackIT__Equipment.recordType-meta.xml
<RecordType>
    <fullName>TrackIT__Equipment</fullName>
    <active>true</active>
    <description>Record Type for Facility Manager Equipment Records</description>
    <label>Equipment</label>
</RecordType>